# vibe

./: .gitignore  DOCKER_README.md  Makefile  README.md  docker-compose.override.yml.disabled  docker-compose.yml  pyproject.toml  ruff.toml
.kiro/specs/bluesky-streaming-pipeline/: design.md  requirements.md  tasks.md
.kiro/steering/: bluesky-patterns.md  kafka-flink-patterns.md  project-context.md  python-standards.md  streaming-patterns.md  testing-guidelines.md  tooling.md
config/: .gitkeep  prometheus.yml
config/grafana/dashboards/: system-overview.json
config/grafana/provisioning/datasources/: datasources.yml
config/superset/: Dockerfile  init_superset.sh  setup_complete.py  setup_datasources.py  superset_config.py
config/superset/dashboards/: historical_analysis.json  realtime_trends.json
services/bluesky-producer/: Dockerfile  bluesky_client.py  kafka_producer.py  main.py  requirements.txt  test_bluesky_client.py  test_integration.py  test_integration_kafka.py  test_kafka_producer.py
services/cache-layer/: Dockerfile  README.md  __init__.py  cache_layer.py  example_usage.py  requirements.txt  test_cache_layer.py  test_integration.py
services/data-lake/: Dockerfile  README.md  __init__.py  data_lake_manager.py  example_usage.py  requirements.txt  test_basic.py  test_data_lake_manager.py  test_unit.py
services/superset-integration/: Dockerfile  README.md  health_server.py  requirements.txt  superset_manager.py  test_basic_functionality.py  test_superset_integration.py
services/trend-processor/: Dockerfile  README.md  TREND_DETECTION_IMPLEMENTATION.md  __init__.py  example_trend_alert_usage.py  flink_job.py  flink_manager.py  kafka_trend_processor.py  main.py  requirements.txt  run_tests.py  test_basic_functionality.py  test_deployment.py  test_flink_integration.py  test_sliding_window.py  test_state_management.py  test_trend_alert_integration.py  test_trend_alert_publisher.py  test_trend_detection.py  test_trend_integration.py  test_window_integration.py  trend_alert_integration.py  trend_alert_publisher.py  trend_detector.py
shared/: .gitkeep  __init__.py  models.py
tests/: .gitkeep
